--- a/src/main/resources/assets/capybaramod/lang/en_us.json
+++ b/src/main/resources/assets/capybaramod/lang/en_us.json
@@ -1,4 +1,4 @@
 {
   "item.capybaramod.water_spout": "Water spout",
-  "entity.capybaramod.capy" : "Capybara"
+  "entity.capybaramod.capybara" : "Capybara"
 }
