added spawn egg

--- a/src/main/resources/assets/capybaramod/lang/en_us.json
+++ b/src/main/resources/assets/capybaramod/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.capybaramod.water_spout": "Water spout",
+  "item.capybaramod.capybara_spawn_egg": "Capybara Spawn Egg",
+
   "entity.capybaramod.capybara" : "Capybara"
 }
